# world-mode

./: .env.example  .gitignore  .mcp.json  Cargo.toml  HANDOFF.md  README.md  SOUL.md  docker-compose.yml  wm-serve.cmd  world-mode-design-spec.docx
.claude/: settings.local.json
.obsidian/: workspace.json
.stfolder/: syncthing-folder-8c0e0e.txt
abstractions/: jumpstart_base_blueprint.txt
abstractions/level0/: README.md
abstractions/level1/: README.md
abstractions/level2/: README.md
abstractions/level3/: README.md
blueprints/: big game try.txt  initial assembler base 2.txt  initial assembler base 3.txt  initial assembler base.txt  jumpstart+.txt
configs/: world-mode.toml
configs/prompts/: system.md
crates/wm-bridge/: Cargo.toml
crates/wm-cli/: Cargo.toml
crates/wm-core/: Cargo.toml
crates/wm-core/src/: config.rs  lib.rs  main.rs  state.rs
crates/wm-core/src/comms/: mod.rs  rcon.rs  websocket.rs
crates/wm-core/src/executor/: program.rs
crates/wm-core/src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
crates/wm-core/src/model/: world_state.rs
crates/wm-core/src/perception/: mod.rs  state_parser.rs
crates/wm-core/src/planner/: goal_stack.rs  mod.rs
crates/wm-core/src/reflection/: error_classifier.rs  mod.rs
dashboard/: README.md
docs/: ARCHITECTURE.md  PHASE0-CHECKLIST.md
docs/nilaus-masterclass/: video-list.json
docs/nilaus-space-age/: video-list.json
factorio-server/: exchange-string.txt  map-gen-settings-new.json  map-gen-settings.json  map-settings-new.json  mod-list.json  rconpw  server-settings.example.json
scripts/: fetch-transcripts.py  publish-mod.py  scrape-transcripts-kapture.py
(+162 files in other folders)
